--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,8 @@
 NEWS - list of user-visible changes between releases of GNU Libtool
 
+New in 1.5.11a: 2004-??-??; CVS version 1.5.11a, Libtool team:
+* Bug Fixes.
+
 New in 1.5.10: 2004-09-19; CVS version 1.5.9a, Libtool team:
 * GNU/linux ia64 fixes.
 * Works on platforms with no c++ compiler.
