--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-09-22  Charles Wilson  <cwilson@spam.protected>
 
+	* m4/libtool.m4 (_LT_SYS_DYNAMIC_LINKER): better quoting for
+	postinstall_cmds and postuninstall_cmds to allow spaces in install
+	paths.
+
 	* config/ltmain.in (func_generate_dlsyms): Addresses in
 	_preloaded_symbols[] cannot go into .rdata section if symbols are
 	DATA imported from DLL, on windows, because runtime relocations
