--- a/NEWS
+++ b/NEWS
@@ -17,6 +17,7 @@ New in 1.9d: 2004-??-??; CVS version 1.9c, Libtool team:
   types have been exchanged.  See libltdl/slist.c for documentation.
 * libltdl is C89 compatible again.  lt_dlsymbol type removed, and lt_dlsymlist
   structure changed to avoid using C99 flexible arrays.
+* Support self dlopening for executables on cygwin and mingw.
 * Improved support for linux-gnu/ia64.
 * Fixed some memory leaks in libltdl.
 
