--- a/doc/libtool.texi
+++ b/doc/libtool.texi
@@ -5062,16 +5062,15 @@ C @var{symbol3} @var{C-symbol3}
 $
 @end example
 
-The first column contains the symbol type (used to tell data from code
-on some platforms), but its meaning is system dependent.
+The first column contains the symbol type (used to tell data from code)
+but its meaning is system dependent.
 @end defvar
 
 @defvar global_symbol_to_cdecl
 A pipeline that translates the output of @var{global_symbol_pipe} into
-proper C declarations.  On platforms whose linkers differentiate code
-from data, such as HP/UX, data symbols will be declared as such, and
-code symbols will be declared as functions.  On platforms that don't
-care, everything is assumed to be data.
+proper C declarations.  Since some platforms, such as HP/UX, have
+linkers that differentiate code from data, data symbols are declared
+as data, and code symbols are declared as functions.
 @end defvar
 
 @defvar hardcode_action
