--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
-04-09-23  Gary V. Vaughan  <gary@gnu.org>
+2004-09-23  Gary V. Vaughan  <gary@gnu.org>
+
+	* m4/libtool.m4 (_LT_CMD_GLOBAL_SYMBOLS): Gah.  Merge error
+	corrected.
+
+2004-09-23  Gary V. Vaughan  <gary@gnu.org>
 
 	Since defs can change (path to grep for example) when it is made
 	for a different host, it can't be shipped.  That also means that
