--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-09-24  Gary V. Vaughan  <gary@gnu.org>
+
+	* m4/libtool.m4 (_LT_SYS_DYNAMIC_LINKER) [openbsd3.3]: Set
+	need_version to yes or no depending on the os release.
+	Reported by Dalibor Topic <robilad@kaffe.org>
+
 2004-09-23  Gary V. Vaughan  <gary@gnu.org>
 
 	* tests/cdemo-conf.test, tests/cdemo-exec.test,
