--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-24  Peter O'Gorman  <peter@pogma.com>
+
+	* m4/libtool.m4 (_LT_LANG_CXX_CONFIG) [darwin]: Don't echo gcc -v
+	output during configure.
+
 2004-09-24  Gary V. Vaughan  <gary@gnu.org>
 
 	* m4/libtool.m4 (_LT_DECL_EGREP): Only the newest CVS autoconf
