--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,12 @@
-2004-09-22  Charles Wilson  <cwilson@spam.protected>
+2004-09-25  Gary V. Vaughan  <gary@gnu.org>
+
+	* config/ltmain.in (func_mode_link): When linking an installed
+	libtool library on the command line using -lfoo we need to find
+	the library in the search paths and add it's dependency_libs to
+	the link in the conv pass so that any libtool libs listed are
+	correctly expanded in the link pass.
+
+2004-09-24  Charles Wilson  <cwilson@spam.protected>
 
 	* libtool.m4 (_LT_SYS_DYNAMIC_LINKER): Revert changeset from
 	`2004-09-22  Charles Wilson  <cwilson@spam.protected>'.
