--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-09-26  Albert Chin-A-Young  <china@thewrittenword.com>
+
+	* m4/libtool.m4 (_LT_LINKER_SHLIBS) [aix]: In archive_expsym_cmds,
+	move -bnoentry linker option before $compiler_flags to honor any
+	possible -e entries in LDFLAGS.
+
 2004-09-25  Gary V. Vaughan  <gary@gnu.org>
 
 	* config/ltmain.in (func_mode_link): When linking an installed
