--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-27  Peter O'Gorman  <peter@pogma.com>
+
+	* m4/libtool.m4 (_LT_LANG_CXX_CONFIG) [darwin]: Don't echo gcc -v
+	output during configure. (Really this time, honest)
+
 2004-09-26  Albert Chin-A-Young  <china@thewrittenword.com>
 
 	* m4/libtool.m4 (_LT_LINKER_SHLIBS) [aix]: In archive_expsym_cmds,
