--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-09-30  Gary V. Vaughan  <gary@gnu.org>
+
+	* m4/libtool.m4 (rm): Use RM throughout for consistency with
+	config/ltmain.in.
+	Reported by Charles Wilson <cwilson@spam.protected>
+
 2004-09-27  Peter O'Gorman  <peter@pogma.com>
 
 	* m4/libtool.m4 (_LT_LANG_CXX_CONFIG) [darwin]: Don't echo gcc -v
