* m4/libtool.m4 (hardcode_shlibpath_var) [darwin7]: My Panther workstation doesn't hardcode the shared library path, although it used to, so this is more likely a function of the binutils and/or gcc I am using at the moment.  The hardcode value setting code for the configure script sucks at the moment though... * (TODO): ...and needs to do a test compile instead of a table lookup before 2.0 final.

--- a/TODO
+++ b/TODO
@@ -7,9 +7,9 @@ GNU Libtool
 1.1. libtool
 ------------
 
-* Factor common shell preamble and function definitions into a separate
-  file and substitute the contents into all of our shell scripts at
-  bootstrap, to avoid any synchronisation issues.
+* Rather than looking up the linker's hardcode characteristics in a
+  table of shell code, use objdump or equivalent to probe a test program
+  at configure time.
 
 * Eliminate the warnings from autoconf -Wobsolete.
 
