--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2004-09-30  Gary V. Vaughan  <gary@gnu.org>
 
+	* m4/libtool.m4 (hardcode_shlibpath_var) [darwin7]: My Panther
+	workstation doesn't hardcode the shared library path, although it
+	used to, so this is more likely a function of the binutils and/or
+	gcc I am using at the moment.  The hardcode value setting code for
+	the configure script sucks at the moment though...
+	* (TODO): ...and needs to do a test compile instead of a table
+	lookup before 2.0 final.
+
 	* m4/libtool.m4 (echo): Use ECHO throughout for consistency with
 	config/ltmain.in.
 	Reported by Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
