--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2004-09-23  Jim Tison  <jtison@us.ibm.com>
+
+	Initial support for s390x-ibm-tpf:
+
+	* m4/libtool.m4: Correct obvious spelling errors in remarks.
+	(_LT_ENABLE_LOCK): Make s390x-ibm-tpf hosts adopt elf64_s390
+	conventions.
+	(_LT_SYS_DYNAMIC_LINKER): Set defaults for s390x-ibm-tpf host.
+	(_LT_CHECK_MAGIC_METHOD): Skip all dependency checks for
+	s390x-ibm-tpf hosts.
+	(_LT_LINKER_SHLIBS): Make s390x-ibm-tpf hosts adopt GNU/Linux OS
+	attributes.
+	* NEWS: Updated.
+
 2004-10-01  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* config/ltmain.in (func_mode_install): Need to set $tmpdir before
