--- a/NEWS
+++ b/NEWS
@@ -19,6 +19,7 @@ New in 1.9d: 2004-??-??; CVS version 1.9c, Libtool team:
   structure changed to avoid using C99 flexible arrays.
 * Support self dlopening for executables on cygwin and mingw.
 * Improved support for linux-gnu/ia64.
+* Initial support for s390x-ibm-tpf.
 * Fixed some memory leaks in libltdl.
 
 New in 1.9b: 2004-08-29; CVS version 1.5a, Libtool team:
