--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2004-10-03  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>,
+	    Gary V. Vaughan  <gary@gnu.org>
+
+	* libltdl/lt__alloc.h: Declare exported functions with LT_SCOPE
+	for mingw32.
+	* libltdl/lt__dirent.h: Ditto.
+	* libltdl/argz._h: Ditto.  Be careful about not requiring
+	additional libltdl files when used outside of libltdl.
+	* libltdl/slist.h: Ditto.
+	* HACKING: Add a section on libltdl implementation layering.
+
 2004-10-03  Gary V. Vaughan  <gary@gnu.org>
 
 	* tests/quote.test: echo is called ECHO now.  Make sure we extract
