--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,8 @@
 NEWS - list of user-visible changes between releases of GNU Libtool
 
+New in 1.9f: 2004-??-??; CVS version 1.9e, Libtool team:
+* ??
+
 New in 1.9d: 2004-10-03; CVS version 1.9c, Libtool team:
 * If non-pic objects were not compiled, and libtool is called in link mode,
   libtool no longer silently creates an empty archive, but rather falls
