Without this change, the distributed libtool tarball has a dependency on autom4te.  There was some inconsistency in the filenames: now we have foo.m4sh -> m4sh -> foo.in -> configure -> foo[.sh].  Bootstrap runs the m4sh steps and the resulting .in files are distributed.
* tests/Makefile.am (EXTRA_DIST): Distribute defs.m4sh.
* Makefile.am (EXTRA_DIST): Distribute libtoolize.m4sh.
(libtoolize.in, libtoolize): Split into bootstrap and runtime
stages.
($(top_srcdir)/tests/defs.in, $(top_srcdir)/tests/defs): Ditto.
($(top_srcdir)/config/ltmain.sh): Swap ltmain.m4sh and ltmain.in
names.
* bootstrap: Make libtoolize.in and tests/defs.in.
* NEWS: Updated.

--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,9 @@
 NEWS - list of user-visible changes between releases of GNU Libtool
 
 New in 1.9f: 2004-??-??; CVS version 1.9e, Libtool team:
-* ??
+* Fix a regression in 1.9d, which required an installed automake to build the
+  bootstrapped tarball.
+* Fix hanging bug on MinGW.
 
 New in 1.9d: 2004-10-03; CVS version 1.9c, Libtool team:
 * If non-pic objects were not compiled, and libtool is called in link mode,
