--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,21 @@
+2004-10-04  Gary V. Vaughan  <gary@gnu.org>
+
+	Without this change, the distributed libtool tarball has a
+	dependency on autom4te.  There was some inconsistency in the
+	filenames: now we have foo.m4sh -> m4sh -> foo.in -> configure
+	-> foo[.sh].  Bootstrap runs the m4sh steps and the resulting .in
+	files are distributed.
+
+	* tests/Makefile.am (EXTRA_DIST): Distribute defs.m4sh.
+	* Makefile.am (EXTRA_DIST): Distribute libtoolize.m4sh.
+	(libtoolize.in, libtoolize): Split into bootstrap and runtime
+	stages.
+	($(top_srcdir)/tests/defs.in, $(top_srcdir)/tests/defs): Ditto.
+	($(top_srcdir)/config/ltmain.sh): Swap ltmain.m4sh and ltmain.in
+	names.
+	* bootstrap: Make libtoolize.in and tests/defs.in.
+	* NEWS: Updated.
+
 2004-10-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* README, README.alpha: Update notes regarding available VERBOSE
