--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 NEWS - list of user-visible changes between releases of GNU Libtool
 
 New in 1.9f: 2004-??-??; CVS version 1.9e, Libtool team:
+* Fix a regression in 1.9d, where ECHO was always set to 'echo' and the
+  backslash quoting tests were never run.
 * Fix a regression in 1.9d, where progpath was used for --no-reexec before it
   was set.
 * Fix a regression in 1.9d, which required an installed automake to build the
